# streaming_deckbuilder

./: .gitignore  Cargo.toml  README.md  cards.json
src/: ai.rs  automaton.rs  game_control.rs  game_logic.rs  game_objects.rs  gameobjects.rs  loading.rs  logic.rs  main.rs  test_logic.rs  ui.rs
src/ui/: board_display.rs  game_end_state.rs  mod.rs  widgets.rs
static/: cards.json  cards_expanded.json
