[package]
name = "streaming_deckbuilder"
version = "0.1.0"
authors = ["Lyco <zdenek.belehradek@seznam.cz>"]
edition = "2018"
default-run = "game"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicksilver = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
json = "*"
itertools = "*"

[[bin]]
name = "game"
path = "src/main.rs"

[[bin]]
name = "test"
path = "src/test_logic.rs"