[package]
name = "streaming_deckbuilder"
version = "0.1.0"
authors = ["Lyco <zdenek.belehradek@seznam.cz>"]
edition = "2018"
default-run = "game"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
json = "*"
itertools = "*"
derivative = "1.0"
futures = "0.1" # Use the same version as quicksilver

[dependencies.quicksilver]
version = "0.3.20"
default-features = false
features = ["collisions", "complex_shapes", "immi_ui", "fonts", "gamepads", "saving"] # all except sound

[[bin]]
name = "game"
path = "src/main.rs"